style: fix the spacing of the inputtext

--- a/my-blog/src/pages/Home/Home.module.css
+++ b/my-blog/src/pages/Home/Home.module.css
@@ -16,6 +16,7 @@
 .search_from input {
 	margin-right: 10px;
 	width: 50%;
+	margin-bottom: 1em;
 }
 
 .noposts {
